--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -22,3 +22,11 @@ body {
         border-radius: 1rem;
     }
 }
+
+button {
+    text-decoration: none;
+    border:none;
+    background-color: transparent;
+    text-align: left;
+    cursor: pointer;
+}
