--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -6,6 +6,10 @@
     list-style: none;
 }
 
+.turnoff {
+    display: none;
+}
+
 .normal {
     background-color: #a6a877;
 }
@@ -142,6 +146,16 @@
     font-size: .625rem;
     color: #fff;
     background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+}
+
+.back {
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    color: #fff;
+    background-color: #bf3029;
     border: none;
     border-radius: 1rem;
 }
