Add base-stats and upt pokemon-model

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -61,3 +61,10 @@ button {
     border: 1px solid #ccc;
     border-top: none;
 }
+
+.stats {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+}
